2004-10-16  Florian Boor <florian.boor@kernelconcepts.de>

    * Released Version 0.32
    * main.c: Moved screen layout detection.
    * edit-vcard.desktop.in, edit-vcard.png: New files
    * export.* (save_to_file): New function to save vcards.
    * editing.c: Change behaviour if running standalone.
    * proto.h, editing.c, main.c: Made edit window title free selectable.
    * main.c: Added switch to edit personal vcard only.
    * db.* (db_open): Open alternate database.

2004-10-16  Florian Boor <florian.boor@kernelconcepts.de>

    * editing.c (phone_key_press_event): Fixed copy and paste hotkeys.
    
2004-10-13  Florian Boor <florian.boor@kernelconcepts.de>

    * export.*, main.c: Added support for irda transfer via dbus.

2004-10-12  Florian Boor <florian.boor@kernelconcepts.de>
    
    * Released Version 0.31
    * main.c: Using of find dialog, Ctrl+f, button (landscape)
    * finddlg.[c/h]: New files for find dialog.
    * Makefile: Added new files, changed version number.
    * db.c, db.h (db_get_entries_filtered): New search function to return
                                            contacts that contain a given 
                                            string.    

2004-10-11  Florian Boor <florian.boor@kernelconcepts.de>

    * main.c: Reduced effect of "-n" switch to hide structure edit.
    * configure.c: Added database tab provides database compacting and info.
    * db.*: Added functions for database cleanup (db_compress) and database
            size info (db_size);
    * main.c, configure.c: Implemented landscape mode list position config.
    * configure.c: Config values for portrait mode only shown if portrait
                   is active.
    * db.*: Removed obsolete db_get_entries_alpha() and friends;
            Added function to update a config value. (db_update_config_values)
    * main.c (delete_contact): Fixed cursor positioning after delete. 

2004-10-09  Florian Boor  <florian.boor@kernelconcepts.de>
